Create moving circles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="./css/background.css">
   </head>
   <body>
-    <canvas></canvas>
-    <script src="canavs-resize/canvas.js"></script>
+    
+    <!-- <canvas></canvas> -->
+    <!-- <script src="canavs-resize/canvas.js"></script> -->
   </body>
 </html>
