begin styling home page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="utf-8">
     <title>Canvas Resize</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/background.css">
+    <link rel="stylesheet" type="text/css" href="./css/canvas.css">
+    <link rel="stylesheet" type="text/css" href="./css/webpage.css">
   </head>
-  <body>
-    
-    <!-- <canvas></canvas> -->
+  <body class='background'>
+    <div>
+      <h1>Shrine Dog Runner</h1>
+    </div>
+    <div class="">
+
+      <div class='canvas-placement'>
+        <canvas></canvas>
+
+      </div>
+      <h3>Help the Shrine Dog collect lost souls while avioding evil spirits</h3>
+    </div>
+
     <!-- <script src="canavs-resize/canvas.js"></script> -->
   </body>
 </html>
