Install, but not running webpack files

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" type="text/css" href="./css/webpage.css">
   </head>
   <body class='background'>
-    <div>
+    <div class='webpage-title'>
       <h1>Shrine Dog Runner</h1>
     </div>
     <div class="">
 
-      <div class='canvas-placement'>
+      <div class='webpage-canvas-placement'>
         <canvas></canvas>
+        <script src="canvas-elements/canvas.js"></script>
 
       </div>
-      <h3>Help the Shrine Dog collect lost souls while avioding evil spirits</h3>
+      <div class='webpage-description'>
+        <h3>Help the Shrine Dog collect lost souls while avioding evil spirits</h3>
+      </div>
     </div>
 
-    <!-- <script src="canavs-resize/canvas.js"></script> -->
   </body>
 </html>
