able to get image to render on screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
       <div class='webpage-canvas-placement'>
         <canvas></canvas>
-        <script src="canvas-elements/canvas.js"></script>
+        <!-- <script src="canvas-elements/canvas.js"></script> -->
+        <script src="canvas-elements/game.js"></script>
+        <img class='hidden' id='Fuji' src="images/Mount_Fuji_from_mount_tanjo.jpg" alt="">
 
       </div>
       <div class='webpage-description'>
