Background render with ground

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Canvas Resize</title>
+    <title>Shrine Dog Runner</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/canvas.css">
     <link rel="stylesheet" type="text/css" href="./css/webpage.css">
@@ -17,7 +17,8 @@
         <canvas></canvas>
         <!-- <script src="canvas-elements/canvas.js"></script> -->
         <script src="canvas-elements/game.js"></script>
-        <img class='hidden' id='Fuji' src="images/Mount_Fuji_from_mount_tanjo.jpg" alt="">
+        <!-- <script src="canvas-elements/breakout.js"></script> -->
+
 
       </div>
       <div class='webpage-description'>
