--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       </div>
       <div class='webpage-description'>
-        <h3>Help the Shrine Dog collect lost souls while avioding evil spirits</h3>
+        <h3>Help the Shrine Dog collect lost souls while avoiding evil spirits</h3>
       </div>
     </div>
 
