bundle file setup

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/canvas.css">
     <link rel="stylesheet" type="text/css" href="./css/webpage.css">
+
   </head>
   <body class='background'>
     <div class='webpage-title'>
@@ -15,8 +16,8 @@
 
       <div class='webpage-canvas-placement'>
         <canvas></canvas>
-        <script src="canvas-elements/game.js"></script>
-
+        <!-- <script src="canvas-elements/game.js"></script> -->
+        <script type="application/javascript" src="./bundle.js"></script>
 
       </div>
       <div class='webpage-description'>
