--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="">
 
       <div class='webpage-canvas-placement'>
-        <canvas></canvas>
+        <canvas id='canvas'></canvas>
         <!-- <script src="canvas-elements/game.js"></script> -->
         <script type="application/javascript" src="./bundle.js"></script>
 
