Will keep track of top five scores. Floor is now a for loop.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,29 @@
     <div class="">
 
       <div class='webpage-canvas-placement'>
+        <div class="controls-placement">
+          <div class="controls-styling">
+            <h3> controls</h3>
+            <ul class="control-instruction-placement">
+              <li class='control-instruction-styling'>Space Bar or the up arrow key to jump</li>
+              <li class='control-instruction-styling'>p to pause</li>
+            </ul>
+          </div>
+        </div>
         <canvas id='canvas'></canvas>
-        <!-- <script src="canvas-elements/game.js"></script> -->
         <script type="application/javascript" src="./bundle.js"></script>
+        <div class="controls-placement">
+          <div class="controls-styling">
+            <h3> Current Session's Five Highscores</h3>
+            <ul id='scores' class="control-instruction-placement">
+              <li id='score 0'></li>
+              <li id='score 1'></li>
+              <li id='score 2'></li>
+              <li id='score 3'></li>
+              <li id='score 4'></li>
+            </ul>
+          </div>
+        </div>
 
       </div>
       <div class='webpage-description'>
