Add logos and font style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/canvas.css">
     <link rel="stylesheet" type="text/css" href="./css/webpage.css">
-
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Shojumaru" rel="stylesheet">
   </head>
   <body class='background'>
     <div class='webpage-title'>
@@ -43,6 +44,14 @@
       <div class='webpage-description'>
         <h3>Help the Shrine Dog collect lost souls while avoiding evil spirits</h3>
       </div>
+    </div>
+      <div class='webpage-description'>
+        <h4>Created by Daniel Moisoff</h4>
+      </div>
+        <ul class='links'>
+          <a href="https://github.com/Dmoisoff"  class='icon-placement'> <img class='icon-size' src="images/github-brands.svg" alt="github"></a>
+          <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
+        </ul>
     </div>
 
   </body>
