--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       </div>
       <div class='webpage-description'>
-        <h3>Help the Shrine Dog collect lost souls while avoiding evil spirits</h3>
+        <h3>Help the Shrine Dog collect lost souls while avoiding ghouls</h3>
       </div>
     </div>
       <div class='webpage-description'>
