--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </div>
 
       </div>
+      <!-- <div class="username">
+        <input class="username-textbox" type="text" name="" value="">
+        <input class="username-submit" type="submit" name="" value="Enter">
+      </div> -->
       <div class='webpage-description'>
         <h3>Help the Shrine Dog collect lost souls while avoiding ghouls</h3>
       </div>
@@ -53,6 +57,7 @@
           <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
         </ul>
     </div>
+
 
   </body>
 </html>
