Adjusted spawn speed of spirit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
           </div>
         </div>
-        <canvas id='canvas'></canvas>
+        <canvas id='canvas' class="canavs-background"></canvas>
         <script type="application/javascript" src="./bundle.js"></script>
         <div class="controls-placement">
           <div class="controls-styling">
@@ -43,10 +43,13 @@
         </div>
 
       </div>
-      <!-- <div class="username">
-        <input class="username-textbox" type="text" name="" value="">
-        <input class="username-submit" type="submit" name="" value="Enter">
-      </div> -->
+      <div class="">
+
+        <!-- <div class="username">
+          <input class="username-textbox" type="text" name="" value="">
+          <input class="username-submit" type="submit" name="" value="Enter">
+        </div> -->
+      </div>
       <div class='webpage-description'>
         <h3>Help the Shrine Dog collect lost souls while avoiding ghouls</h3>
       </div>
