Pause fixed, background styled

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
         </ul>
     </div>
-
+    <div class='hidden' style="font-family: 'Goudy Bookletter 1911', serif;">.</div>
 
   </body>
 </html>
