--- a/index.html
+++ b/index.html
@@ -10,27 +10,40 @@
     <link href="https://fonts.googleapis.com/css?family=Shojumaru" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
   </head>
   <body class='background'>
     <div class='webpage-title'>
       <h1>Shrine Dog Runner</h1>
     </div>
     <div class="">
-
       <div class='webpage-canvas-placement'>
-        <div class="controls-placement">
+        <!-- <div class="controls-placement">
           <div class="controls-styling">
             <h3> controls</h3>
-            <ul class="control-instruction-placement">
-              <li class='control-instruction-styling'>Space Bar or the up arrow key to jump</li>
-              <li class='control-instruction-styling'>p to pause</li>
+            <ul class="control-instruction-placement scores">
+              <li class='control-instruction-styling'>Press the space bar or the up arrow key to jump</li>
+              <li class='control-instruction-styling'>The longer you hold the key the higher you will jump</li>
+              <li class='control-instruction-styling'>Press p to pause</li>
             </ul>
           </div>
+        </div> -->
+        <div class="">
+          <canvas id='canvas' class="canavs-background"></canvas>
+          <script type="application/javascript" src="./bundle.js"></script>
         </div>
-        <canvas id='canvas' class="canavs-background"></canvas>
-        <script type="application/javascript" src="./bundle.js"></script>
         <div class="controls-placement">
           <div class="controls-styling">
+            <h3>Controls</h3>
+            <ul class="control-instruction-placement scores">
+              <li class='control-instruction-styling'>Press the space bar or the up arrow key to jump</li>
+              <li class='control-instruction-styling'>The longer you hold the key the higher you will jump</li>
+              <li class='control-instruction-styling'>Press p to pause</li>
+            </ul>
+          </div>
+          <div class="controls-styling scores spacing">
             <h3> Current Session's Five Highscores</h3>
             <ul id='scores' class="control-instruction-placement">
               <li id='score 0'></li>
@@ -63,6 +76,6 @@
         </ul>
     </div>
     <div class='hidden' style="font-family: 'Goudy Bookletter 1911', serif;">.</div>
-
+    <!-- <canvas id="canvas-background"></canvas> -->
   </body>
 </html>
