Added angellist and styled

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   </head>
   <body class='background'>
     <div class='webpage-title'>
-      <h1>Shrine Dog Runner</h1>
+      <h1 class='white-font'>Shrine Dog Runner</h1>
+    </div>
+    <div class='webpage-description'>
+      <h4 class='white-font'>Created by Daniel Moisoff</h4>
     </div>
     <div class="">
       <div class='webpage-canvas-placement'>
@@ -33,6 +36,9 @@
         <div class="">
           <canvas id='canvas' class="canavs-background"></canvas>
           <script type="application/javascript" src="./bundle.js"></script>
+          <div>
+            <p class='white-font center'>The inspiration for the theme of this game came from my recent trip to Japan. I loved the culture, the landscape and the people there.</p>
+          </div>
         </div>
         <div class="controls-placement">
           <div class="controls-styling">
@@ -53,8 +59,26 @@
               <li id='score 4'></li>
             </ul>
           </div>
+          <div class="controls-styling scores spacing">
+            <div class="control-instruction-placement">
+              <p>Objective</p>
+              <p>Help the Shrine Dog collect lost souls while avoiding ghouls</p>
+              <br>
+              <div>
+                <div class="key-format">
+                  <img class='sprites-key' src="images/ghoul_image.png" alt="">
+                  <p class='key-text-format'>Avoid the ghouls</p>
+                </div>
+              </div>
+              <div>
+                <div class="key-format">
+                  <img class='sprites-key' src="images/ghost_image.png" alt="">
+                  <p class='key-text-format'>Collect the lost spirits</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-
       </div>
       <div class="">
 
@@ -63,14 +87,10 @@
           <input class="username-submit" type="submit" name="" value="Enter">
         </div> -->
       </div>
-      <div class='webpage-description'>
-        <h3>Help the Shrine Dog collect lost souls while avoiding ghouls</h3>
-      </div>
+
     </div>
-      <div class='webpage-description'>
-        <h4>Created by Daniel Moisoff</h4>
-      </div>
         <ul class='links'>
+          <a href="https://angel.co/daniel-moisoff"  class='icon-placement'> <img class='icon-size' src="images/angellist-brands.svg" alt="angellist"></a>
           <a href="https://github.com/Dmoisoff"  class='icon-placement'> <img class='icon-size' src="images/github-brands.svg" alt="github"></a>
           <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
         </ul>
