changed spirits on display page

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
               <br>
               <div>
                 <div class="key-format">
-                  <img class='sprites-key' src="images/ghoul_image.png" alt="">
+                  <img class='sprites-key' src="images/Hexen-Spirit_dark copy.png" alt="">
                   <p class='key-text-format'>Avoid the ghouls</p>
                 </div>
               </div>
               <div>
                 <div class="key-format">
-                  <img class='sprites-key' src="images/ghost_image.png" alt="">
+                  <img class='sprites-key' src="images/spirit_pixel_small.png" alt="">
                   <p class='key-text-format'>Collect the lost spirits</p>
                 </div>
               </div>
