Move links under blurb

--- a/index.html
+++ b/index.html
@@ -38,10 +38,18 @@
           <script type="application/javascript" src="./bundle.js"></script>
           <div>
             <p class='white-font center'>The inspiration for the theme of this game came from my recent trip to Japan. I loved the culture, the landscape and the people there.</p>
+            <div>
+                <ul class='links'>
+                  <a href="https://angel.co/daniel-moisoff"  class='icon-placement'> <img class='icon-size' src="images/angellist-brands.svg" alt="angellist"></a>
+                  <a href="https://github.com/Dmoisoff"  class='icon-placement'> <img class='icon-size' src="images/github-brands.svg" alt="github"></a>
+                  <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
+                </ul>
+            </div>
           </div>
+
         </div>
         <div class="controls-placement">
-          <div class="controls-styling">
+          <div class="controls-styling size">
             <h3>Controls</h3>
             <ul class="control-instruction-placement scores">
               <li class='control-instruction-styling'>Press the space bar or the up arrow key to jump</li>
@@ -89,12 +97,13 @@
       </div>
 
     </div>
+    <!-- <div>
         <ul class='links'>
           <a href="https://angel.co/daniel-moisoff"  class='icon-placement'> <img class='icon-size' src="images/angellist-brands.svg" alt="angellist"></a>
           <a href="https://github.com/Dmoisoff"  class='icon-placement'> <img class='icon-size' src="images/github-brands.svg" alt="github"></a>
           <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
         </ul>
-    </div>
+    </div> -->
     <div class='hidden' style="font-family: 'Goudy Bookletter 1911', serif;">.</div>
     <!-- <canvas id="canvas-background"></canvas> -->
   </body>
