Changed the name from Shrine Dog Runner to Shibe Runner.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Shrine Dog Runner</title>
+    <title>Shibe Runner</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/canvas.css">
     <link rel="stylesheet" type="text/css" href="./css/webpage.css">
@@ -16,7 +16,7 @@
   </head>
   <body class='background'>
     <div class='webpage-title'>
-      <h1 class='white-font'>Shrine Dog Runner</h1>
+      <h1 class='white-font'>Shibe Dog Runner</h1>
     </div>
     <div class='webpage-description'>
       <h4 class='white-font'>Created by Daniel Moisoff</h4>
@@ -70,7 +70,7 @@
           <div class="controls-styling scores spacing">
             <div class="control-instruction-placement">
               <p>Objective</p>
-              <p>Help the Shrine Dog collect lost souls while avoiding ghouls</p>
+              <p>Help Shibe collect lost souls while avoiding ghouls</p>
               <br>
               <div>
                 <div class="key-format">
