Changed the Title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class='background'>
     <div class='webpage-title'>
-      <h1 class='white-font'>Shibe Dog Runner</h1>
+      <h1 class='white-font'>Shibe Runner</h1>
     </div>
     <div class='webpage-description'>
       <h4 class='white-font'>Created by Daniel Moisoff</h4>
