Added proper github link, removed commented out code.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div>
                 <ul class='links'>
                   <a href="https://angel.co/daniel-moisoff"  class='icon-placement'> <img class='icon-size' src="images/angellist-brands.svg" alt="angellist"></a>
-                  <a href="https://github.com/Dmoisoff"  class='icon-placement'> <img class='icon-size' src="images/github-brands.svg" alt="github"></a>
+                  <a href="https://github.com/Dmoisoff/Shibe-Runner"  class='icon-placement'> <img class='icon-size' src="images/github-brands.svg" alt="github"></a>
                   <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
                 </ul>
             </div>
@@ -97,14 +97,5 @@
       </div>
 
     </div>
-    <!-- <div>
-        <ul class='links'>
-          <a href="https://angel.co/daniel-moisoff"  class='icon-placement'> <img class='icon-size' src="images/angellist-brands.svg" alt="angellist"></a>
-          <a href="https://github.com/Dmoisoff"  class='icon-placement'> <img class='icon-size' src="images/github-brands.svg" alt="github"></a>
-          <a href="https://www.linkedin.com/in/dmoisoff/" class='icon-placement'><img class='icon-size' src="images/linkedin-brands.svg" alt="linkedin"></span></a>
-        </ul>
-    </div> -->
-    <div class='hidden' style="font-family: 'Goudy Bookletter 1911', serif;">.</div>
-    <!-- <canvas id="canvas-background"></canvas> -->
   </body>
 </html>
