Added personal website

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <h1 class='white-font'>Shibe Runner</h1>
     </div>
     <div class='webpage-description'>
-      <h4 class='white-font'>Created by Daniel Moisoff</h4>
+      <a href="https://dmoisoff.com/" <h4 class='white-font'>Created by Daniel Moisoff</h4></a>
+
+
     </div>
     <div class="">
       <div class='webpage-canvas-placement'>
